--- a/welovetour/css/style.css
+++ b/welovetour/css/style.css
@@ -99,7 +99,7 @@ p.social_box a:hover{ background-color: #fff; }
 .HeaderBox p.social_box{ padding-top: 36px; }
 
 /*Main_Contents*/
-.Main_Contents{ width: 100%; background-color: #fff;}
+.Main_Contents{ width: 100%; background-color: #fff; overflow-y: hidden;}
 
 .Main_Contents .main_banner{ width: 100%; height: 600px; background: url(../images/banner/index-banner1.jpg) center center no-repeat; background-size: cover; }
 .Main_Contents .travel_date_departure{ width: 100%; }
