--- a/caa/css/style.css
+++ b/caa/css/style.css
@@ -84,6 +84,7 @@ html, body{ height: 100%; }
 .main_contents .bannerBox .iconBox a.icon_03{ background: url(../images/icons_03.png); background-size: contain; }
 .main_contents .bannerBox .iconBox a.icon_04{ background: url(../images/icons_04.png); background-size: contain; }
 .main_contents .bannerBox .iconBox a:hover{ opacity: .8; }
+.main_contents .bannerBox .ContentsBox{ width: 95%; }
 
 .main_contents .bannerBox .flexslider{ width: 100%; height: 353px; }
 .main_contents .bannerBox .flexslider ul li{ height: 353px; background-position: center center; background-repeat: no-repeat; background-size: cover; }
@@ -348,6 +349,8 @@ html, body{ height: 100%; }
 @media (max-width:500px){
 	.subBannerBox .infoBox h4{font-size: 30px;}
 	.subBannerBox .infoBox p{font-size: 15px;}
+	.main_contents .bannerBox .flexslider .titleBox .banner_title{ font-size: 40px; }
+	.main_contents .bannerBox .flexslider .titleBox .sub_title{ font-size: 16px; padding-right: 15px; }
 }
 @media (max-width:460px){
 	.inside_contents .subBannerBox .search_tools input.go_green_btn{ margin-top: 20px; }
