--- a/caa/jvmobilemenu/jv-jquery-mobile-menu.css
+++ b/caa/jvmobilemenu/jv-jquery-mobile-menu.css
@@ -28,7 +28,7 @@ ul.submenu{ padding-top:10px;}
 .mobile-nav ul.mob_submenu li p{ font-size: 15px; line-height: 35px; padding-left: 46px; }
 
 .mobile-nav .language{padding: 0 0 40px 48px; }
-.mobile-nav .language select{  border:1px solid #fff; color: #fff; background-color: transparent; border-radius: 4px; height:28px; line-height: 28px;}
+.mobile-nav .language select{ min-width: 100px;  border:1px solid #fff; color: #fff; background-color: transparent; border-radius: 4px; height:28px; line-height: 28px;}
 .mobile-nav .language select option{ color: #333; }
 
 
