--- a/welovetour/css/style.css
+++ b/welovetour/css/style.css
@@ -42,7 +42,7 @@ p.social_box a:hover{ background-color: #fff; }
 .sidenav a { /* padding: 8px 8px 8px 32px;*/  text-decoration: none;  color: #fff;  display: block;  transition: 0.3s;}
 .sidenav a:hover {  color: #f1f1f1;}
 .sidenav .closebtn { text-align: right; padding: 0px 8px 0px; top: 0; width: 300px; font-size: 48px; position: sticky; position: -webkit-sticky; position: -moz-sticky; position: -ms-sticky; position: -o-sticky;}
-.sidenav .side_Contents{ padding: 20px; width: 100%; height:100%; overflow-y: auto; }
+.sidenav .side_Contents{ padding: 20px; width: 100%; height:100%; overflow-y: auto; overflow-x:hidden; }
 
 .sidenav ul.side_menu{ padding: 20px; width: 350px; margin-left: -20px; }
 .sidenav ul.side_menu li{position: relative;}
@@ -99,7 +99,7 @@ p.social_box a:hover{ background-color: #fff; }
 .HeaderBox p.social_box{ padding-top: 36px; }
 
 /*Main_Contents*/
-.Main_Contents{ width: 100%; background-color: #fff; overflow-x: hidden;}
+.Main_Contents{ width: 100%; background-color: #fff;}
 
 .Main_Contents .main_banner{ width: 100%; height: 600px; background: url(../images/banner/index-banner1.jpg) center center no-repeat; background-size: cover; }
 .Main_Contents .travel_date_departure{ width: 100%; }
@@ -141,7 +141,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents h4.sub_title{ font-size: 28px; color: #d1ab1b; padding: 15px 0; }
 .Main_Contents p.description{ font-size: 18px; text-align: justify; line-height: 27px;}
 
-.Main_Contents .travel_itineraries{ width: 100%; }
+.Main_Contents .travel_itineraries{ width: 100%; overflow-x: hidden;}
 .Main_Contents .travel_itineraries .bothbox{ float: left; width: 50%; }
 
 .Main_Contents .travel_itineraries .info_box{ max-width: 550px; padding: 12px; margin: 0 auto; }
@@ -149,7 +149,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents .travel_itineraries .youtube_box{ text-align: center; padding: 15px 0 25px 0; }
 .Main_Contents .travel_itineraries .youtube_box iframe{ display: inline-block; width: 100%; max-width:560px; height:315px; }
 
-.Main_Contents .travel_itinerary{ width: 100%; }
+.Main_Contents .travel_itinerary{ width: 100%; overflow-x: hidden; }
 .Main_Contents .top_title_line{ text-align: center; padding: 30px 0; position: relative;}
 .Main_Contents .top_title_line::before{ content: ""; position: absolute; width: calc(50% - 120px); top: 50%; left: 0; display: block; height: 1px; border-top: 1px solid #c0c0c0; }
 .Main_Contents .top_title_line::after{ content: ""; position: absolute; width: calc(50% - 120px); top: 50%; right: 0; display: block; height: 1px; border-top: 1px solid #c0c0c0; }
@@ -184,7 +184,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents .travel_itinerary .version_04 .photo_02{ max-width: calc(50% - 4.5px); float: right; height: 574px; }
 
 /*參考航班*/
-.Main_Contents .travel_aircraft_flight{ background-color: #e7e7e7; padding: 30px 0; }
+.Main_Contents .travel_aircraft_flight{ background-color: #e7e7e7; padding: 30px 0; overflow-x: hidden;}
 .Main_Contents .travel_aircraft_flight .top_title_line::after{width: calc(50% - 145px);}
 .Main_Contents .travel_aircraft_flight .top_title_line::before{width: calc(50% - 145px);}
 
@@ -211,7 +211,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents .travel_aircraft_flight .aircraft_box_mob p{ padding: 15px 0; font-size: 18px;}
 
 /*每日行程*/
-.Main_Contents .travel_daily_itinerary{ width: 100%; padding: 30px 0;}
+.Main_Contents .travel_daily_itinerary{ width: 100%; padding: 30px 0; overflow-x: hidden;}
 .Main_Contents .travel_daily_itinerary .top_where{ width: 100%; position: relative; padding:25px 0 20px 0;}
 .Main_Contents .travel_daily_itinerary .top_where p.day{ position: absolute; left: 0; top: calc(50% - 45px); font-size: 33px; color: #d1ab1b; }
 .Main_Contents .travel_daily_itinerary .top_where p.day span{ font-size: 70px; padding: 0 5px; }
@@ -236,7 +236,7 @@ p.social_box a:hover{ background-color: #fff; }
 .Main_Contents .travel_daily_itinerary ul.meals li p span.store{ display: inline-block; max-width: 50vw; }
 
 /*售價明細*/
-.Main_Contents .travel_price{ width: 100%; padding: 30px 0;}
+.Main_Contents .travel_price{ width: 100%; padding: 30px 0; overflow-x: hidden;}
 .Main_Contents .travel_price .ad_box{ text-align: center; padding: 0 0 35px 0;}
 .Main_Contents .travel_price img{ display: inline-block; width: 100%; }
 
